# RDOPT

./: .gitattributes  .gitignore  DeepONet_seal.py  DeepONet_seal_multi.py  FNO_seal.py  FNO_seal_gu.py  FNO_seal_multi.ipynb  FNO_seal_multi.py  HellWorld.py  LICENSE  MLP_seal_leakage.py  MLP_seal_leakage_2.py  MLP_seal_multi.py  NN_seal.py  RDOPT.py  README.md  X.npz  check_RDOPT.py  check_geometry.py  check_indvidual.py  deeponet_multihead_20250908_T_182846.eps  deeponet_multihead_20250908_T_183632.eps  deeponet_multihead_20250908_T_203220.eps  deeponet_multihead_20250911_T_091324.eps  eig_py.mat  example_load_seal.py  fnn_seal_best_model.pth  fnn_seal_best_model_0.pth  fnn_seal_best_model_1.pth  fnn_seal_best_model_2.pth  fnn_seal_best_model_3.pth  fnn_seal_best_model_4.pth  fnn_seal_best_model_5.pth  fnn_seal_model.pth  fno_blocks_what.py  fno_seal_best_model.pth  fno_what.py  image_classifier_model.onnx  import_data.py  inference_interpolation.ipynb  (+47 more)
checkpoints/: gen_0005.npz  gen_0010.npz  gen_0015.npz  gen_0020.npz  gen_0025.npz  gen_0030.npz  gen_0035.npz  gen_0040.npz  gen_0045.npz  gen_0050.npz  gen_0055.npz  gen_0060.npz  gen_0065.npz  gen_0070.npz  gen_0075.npz  gen_0080.npz  gen_0085.npz  gen_0090.npz  gen_0095.npz  gen_0100.npz  gen_0105.npz  gen_0110.npz  gen_0115.npz  gen_0120.npz  gen_0125.npz  gen_0130.npz  gen_0135.npz  gen_0140.npz  gen_0145.npz  gen_0150.npz  gen_0155.npz  gen_0160.npz  gen_0165.npz  gen_0170.npz  gen_0175.npz  gen_0180.npz  gen_0185.npz  gen_0190.npz  gen_0195.npz  gen_0200.npz  (+61 more)
iranai/: FNO_seal_Bayesian.py  FNO_seal_gu.py  (+10 more)
(+259 files in other folders)
