[project]
name = "rdopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "about-time==4.2.1",
    "alembic==1.16.5",
    "alive-progress==3.3.0",
    "autograd==1.8.0",
    "cma==4.4.0",
    "colorlog==6.9.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "deepxde>=1.14.0",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "filelock==3.19.1",
    "fonttools==4.60.0",
    "fsspec==2025.9.0",
    "graphemeu==0.7.2",
    "h5py==3.14.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jupyterlab>=4.4.7",
    "kiwisolver==1.4.9",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "networkx==3.5",
    "neuraloperator>=1.0.2",
    "numpy==2.3.3",
    "openpyxl>=3.1.5",
    "optuna==4.5.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pymoo==0.6.1.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "sqlalchemy==2.0.43",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "wrapt==1.17.3",
]
